Bootstrap theme and initial JS

--- a/css/main.css
+++ b/css/main.css
@@ -1,22 +1,4 @@
-
-
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.modal-dialog {
+	z-index: 1100;
+}
 
