--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,75 @@
-.modal-dialog {
-	z-index: 1100;
+body {
+  background: url("../img/swirl-pattern.png");
+  background-repeat: repeat;
 }
 
+.jumbotron {
+  background-color: #2c3e50;
+  color: #ecf0f1;
+}
+
+.form-control:focus {
+  border-color: #3498db;
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075), 0 0 8px rgba(44,62,80,0.6);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,0.075), 0 0 8px rgba(44,62,80,0.6);
+}
+
+.modal-dialog {
+  z-index: 1100;
+}
+
+.prefetch {
+  background: url("../img/linkedin-add-to-profile.png");
+  background-repeat: no-repeat;
+  background-position: -9999px -9999px;
+}
+
+#username-form label {
+  text-align: left;
+  display: block;
+  padding-left: 5px;
+}
+  .form-group {
+    display: inline-block;
+    margin: 0 2px;
+    vertical-align: bottom;
+  }
+  #username {
+    width: 20em;
+  }
+  #search-username {
+    display: block;
+  }
+
+#badges-list {
+}
+.course-title {
+  font-size: 2em;
+  font-weight: bold;
+}
+
+.btn-linkedin {
+  right: 0;
+}
+
+@media (max-width: 500px) {
+  .jumbotron {
+    text-align: center;
+  }
+  .form-group {
+    display: block;
+    margin-top: 1em;
+    margin-bottom: 1em;
+  }
+    .form-group:first-child {
+      margin-top: 0;
+    }
+    .form-group:last-child {
+      margin-bottom: 0;
+    }
+  #username,
+  #search-username {
+      width: 100%;
+  }
+}
