--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,14 @@ body {
   background-repeat: repeat;
 }
 
+hr {
+  border-top: 1px solid #2c3e50
+}
+
+a, a:hover, a:focus, a:active, a:visited {
+  color: #3498db;
+}
+
 .jumbotron {
   background-color: #2c3e50;
   color: #ecf0f1;
@@ -42,15 +50,21 @@ body {
     display: block;
   }
 
-#badges-list {
+.result-list {
+  display: none;
 }
+  .result-list h2 {
+    margin-bottom: 1em;
+  }
 .course-title {
   font-size: 2em;
   font-weight: bold;
+  vertical-align: top;
 }
 
 .btn-linkedin {
-  right: 0;
+  display: inline-block;
+  margin: 2px 1em;
 }
 
 @media (max-width: 500px) {
